Bild und Text angepasst

--- a/L01/hallo.html
+++ b/L01/hallo.html
@@ -2,8 +2,8 @@
 
 <body>
 <p> Hallo Dennis. Wie geht es dir?</p>
-<p> Sehr gut </p>
-<img>github-mark.png</img>
+<p> For a brighter Future! </p>
+<img>yes_we_code.jpg</img>
 
 </body>
 
