Bild neu eingebunden

--- a/L01/hallo.html
+++ b/L01/hallo.html
@@ -3,7 +3,7 @@
 <body>
 <p> Hallo Dennis. Wie geht es dir?</p>
 <p> For a brighter Future! </p>
-<img src="yes_we_code.jpg"></img>
+<img src="yes_we_code.jpeg"></img>
 
 </body>
 
