--- a/L01/hallo.html
+++ b/L01/hallo.html
@@ -1,8 +1,8 @@
 <html>
 
 <body>
-<p> Hallo Dennis. Wie geht es dir?</p>
-<p> For a brighter Future! </p>
+<p> Ich weiﬂ nicht was ich hier tue.</p>
+<p> Ich hoffe, alles geht gut.</p>
 <img src="yes_we_code.jpeg"></img>
 
 </body>
