--- a/L01/hallo.html
+++ b/L01/hallo.html
@@ -2,7 +2,7 @@
 <title>Titel 1</title>
 
 <body>
-<p> Ich weiﬂ nicht was ich hier tue.</p>
+<p> Hier steht jetzt neuer Text.</p>
 <p> Ich hoffe, alles geht gut.</p>
 <img src="yes_we_code.jpeg"></img>
 
