--- a/L01/hallo.html
+++ b/L01/hallo.html
@@ -2,7 +2,7 @@
 <title>Es funktioniert!</title>
 
 <body>
-<p> Hier steht jetzt neuer Text.</p>
+<p> Ich ändere den Text in meinem Branch</p>
 <p> Ich hoffe, alles geht gut.</p>
 <img src="yes_we_code.jpeg"></img>
 
