--- a/L01/hallo.html
+++ b/L01/hallo.html
@@ -2,8 +2,8 @@
 <title>Es funktioniert!</title>
 
 <body>
-<p> Hier steht jetzt neuer Text.</p>
-<p> Ich hoffe, alles geht gut.</p>
+<p> HNOFCLBRI</p>
+<p> Haha</p>
 <img src="yes_we_code.jpeg"></img>
 
 </body>
