Revert "Merge branch 'Branch-Dennis' into Branch_Lukas"
This reverts commit 4daa034aa018d649d7d11e0d4128792c88c6f880, reversing
changes made to 3764cdedaf42eada96043a12909c1e6765884a72.

--- a/L01/hallo.html
+++ b/L01/hallo.html
@@ -2,8 +2,8 @@
 <title>Es funktioniert!</title>
 
 <body>
-<p> Ich ändere den Text in meinem Branch</p>
-<p> Ich hoffe, alles geht gut.</p>
+<p> HNOFCLBRI</p>
+<p> Haha</p>
 <img src="yes_we_code.jpeg"></img>
 
 </body>
