nochmal Text geändert

--- a/L01/hallo.html
+++ b/L01/hallo.html
@@ -2,8 +2,8 @@
 <title>Es funktioniert!</title>
 
 <body>
-<p> HNOFCLBRI</p>
-<p> Haha</p>
+<p> Hey Jude</p>
+<p> Temporär</p>
 <img src="yes_we_code.jpeg"></img>
 
 </body>
